Release Notes

* 12/15/2016
  * added nQueueCap
  * added mergeEsAtOS

* 12/9/2016
  * added nRunningCap to AtlasPJT
  * disabled setDEL in AtlasPP

* 12/5/2016
  * increased scout priority to 901

* 12/1/2016
  * changed AtlasPWD to boost task priorities at 95%
  * fixed AtlasAJB and JG to support cmake-based nightlies

* 11/28/2016
  * fixed setScout to propagate exhausted to DEFT

* 11/24/2016
  * changed AtlasPJB not to use baseramcount for pmerge
  * disabled transfer backlog check when negative T1 weight in AtlasPTB
  * changed thresholds for data availability check configurable in AtlasPTB

* 11/22/2016
  * fixed AtlasAJB to use configurator tables instead of schedconfig.space

* 11/16/2016
  * changed AtlasAW to use PRESTAGE_LIMIT
  * added a hint to setDelFlag
  * using 1 for negative ramCount
  * fixed AtlasPJB for no-input tasks

* 11/14/2016
  * changed outDiskCount not to scale with workDiskCount

* 11/9/2016
  * changed AtlasPTB not to ignore job execution ability
  * introduced cutoff based on ioIntensity and mbToMove in AtlasPJB

* 11/7/2016
  * changed JG not to use compact input params for user's trf jobs

* 10/28/2016
  * changed AtlasDDM to work with DN mapped to multiple rucio accounts

* 10/17/2016
  * removing multi-byte characters from task params
  * added eventRatio

* 10/6/2016
  * added addEsParams
  * support for reassignTaskToNucleus=None

* 9/30/2016
  * changed tobeprocess for ratio in float
  * changed ratio of output to check boundaryID

* 9/29/2016
  * added support ratio for output datasets

* 9/21/2016
  * changed AtlasPTB to use deep in list_dataset_replicas for primary dataset replica lookup

* 9/16/2016
  * setting DEL to event ranges

* 9/13/2016
  * using maxPSS for analy tasks

* 9/2/2016
  * using cloneJobs for ES even with nConsumer=1

* 8/29/2016
  * changed analysis to work with containers of containers

* 8/1/2016
  * using campaign in WQ 

* 7/29/2016